clusters/cl01tl/manifests/ephemera/Service-ephemera.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ephemera
  labels:
    app.kubernetes.io/instance: ephemera
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ephemera
    app.kubernetes.io/service: ephemera
    helm.sh/chart: ephemera-4.5.0
  namespace: ephemera
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8286
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: ephemera
    app.kubernetes.io/name: ephemera
