clusters/cl01tl/manifests/ephemera/HTTPRoute-ephemera.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ephemera
  labels:
    app.kubernetes.io/instance: ephemera
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ephemera
    helm.sh/chart: ephemera-4.5.0
  namespace: ephemera
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "ephemera.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ephemera
          namespace: ephemera
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
