clusters/cl01tl/manifests/ephemera/HTTPRoute-http-route-ephemera.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ephemera
  namespace: ephemera
  labels:
    app.kubernetes.io/name: http-route-ephemera
    app.kubernetes.io/instance: ephemera
    app.kubernetes.io/part-of: ephemera
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ephemera.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: ephemera
          port: 80
          weight: 100
